--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 		var name = $('#name').val();
 		
 		if(name != ''){
+		
 			$('h1').replaceWith('<h1>'+ name +' write Hello world</h1>');
+			alert('well done');
 		}
 			
+	
 	});
 	</script>
 </footer>
